added some basic POSTs to controllers
